log
Thu 21 Mar 2024 08:42:44 PM UTC: 
 exercises.c | 32 ++++++++++++++++++++------------
 1 file changed, 20 insertions(+), 12 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:15: error: expected declaration specifiers or ‘...’ before ‘malloc’
   46 |     int *dato(malloc(sizeof(int)));
      |               ^~~~~~
exercises.c:47:6: error: ‘dato’ undeclared (first use in this function)
   47 |     *dato = i + 1;
      |      ^~~~
exercises.c:47:6: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
e03bf11
Thu 21 Mar 2024 08:44:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
e43c8d1
Thu 21 Mar 2024 08:45:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8837a9a
Thu 21 Mar 2024 08:49:58 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:16: error: comparison between pointer and integer [-Werror]
   82 |       if (dato == elem)
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
d6dea61
Thu 21 Mar 2024 09:07:46 PM UTC: 
 exercises.c | 26 ++++++++++++++++----------
 1 file changed, 16 insertions(+), 10 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:95:12: error: ‘pilaAux’ undeclared (first use in this function); did you mean ‘PilaAux’?
   95 |       push(pilaAux, dato);
      |            ^~~~~~~
      |            PilaAux
exercises.c:95:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
74b2686
Thu 21 Mar 2024 09:08:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
e25cb0e
